поигрался с кучей и zgc
Signed-off-by: Arthur Inzhilov <artur-inzhilov@mail.ru>