@@ -4,3 +4,6 @@ bin\windows\zookeeper-server-start.bat config\zookeeper.properties
 bin\windows\kafka-server-start.bat config\server.properties
 посмотреть топик:
 bin\windows\kafka-console-consumer.bat --bootstrap-server localhost:9092 --topic users-topic --from-beginning
+
+VM options для настройки кучи с сборщика мусора:
+-Xms256m -Xmx1g -XX:+UseZGC -XX:ZCollectionInterval=1000 -XX:ZUncommitDelay=60000
